# kubesql

./: .gitignore  Cargo.toml  DESIGNS.md  Dockerfile  README.md  ROADMAP.md  kube.sql
.github/workflows/: workflow.yml
src/: api_builder.rs  main.rs  parser.rs  planner.rs  printer.rs  validator.rs
